<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <group android:id="@+id/group1">
        <item android:id="@+id/add_note_menu" android:title="@string/add_note"></item>
        <item android:id="@+id/edit_note_menu" android:title="@string/edit_note"></item>
        <item android:id="@+id/delete_note_menu" android:title="@string/delete_note"></item>
    </group>
    <group android:id="@+id/group2">
        <item android:id="@+id/add_folder_menu" android:title="@string/add_folder"></item>
        <item android:id="@+id/rename_folder_menu" android:title="@string/rename_folder"></item>
        <item android:id="@+id/delete_folder_menu" android:title="@string/delete_folder"></item>
    </group>

</menu>
